--- a/config_template.yml
+++ b/config_template.yml
@@ -38,7 +38,7 @@ project_descr_en: |
   
   https://openiti.org/about.html
   
-  The KITAB project is developing methods that detect how authors copied from previous works.
+  The ERC-funded KITAB project is developing methods that detect how authors copied from previous works.
   Arabic authors frequently made use of past works, cutting them into pieces and reconstituting
   them to address their own outlooks and concerns.
   We are working to discover relationships between these texts
